# glass-lio

./: .gitignore  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY.md  package.xml
.devcontainer/: devcontainer.json
config/: livox_mid_360.yaml
doc/: 1-imu-init.md  2-sync.md  3-deskew.md  4-downsample.md  5-registration.md  6-local-map.md  7-tight-coupling.md  README.md  deskew.md  gauss-newton.md  pipeline.md  testing.md
docker/: Dockerfile  run.sh
glass_core/: AMENT_IGNORE  CMakeLists.txt
glass_core/cmake/: glass_coreConfig.cmake.in
glass_core/include/glass_core/: gauss_newton.hpp  imu_init.hpp  nav_residual.hpp  nav_state.hpp  preintegration.hpp  so3_jacobian.hpp
glass_core/include/sophus/: LICENSE
glass_core/src/: imu_init.cpp  preintegration.cpp
glass_core/test/: test_imu_init.cpp  test_nav_residual.cpp  test_preintegration.cpp
include/glasslio/: data_process.h  deskew.hpp  gauss_newton.hpp  gyr_int.h  gyr_int.hpp  imu_init.hpp  lio_estimator.hpp  livox_point.hpp  local_map.hpp  nav_residual.hpp  nav_state.hpp  preintegration.hpp  registration.hpp  ros_time.hpp  so3_jacobian.hpp  sync.hpp  tight_registration.hpp  types.hpp
include/lidar_odom/: data_process.h  gyr_int.h  imu_init.hpp  livox_point.hpp  local_map.hpp  ros_time.hpp
include/sophus/: LICENSE
launch/: glasslio.launch.py  lio.launch.py
rviz/: glasslio.rviz  lio.rviz
scripts/: download_bag.sh  run_bag.sh
src/: data_process.cpp  glasslio_node.cpp  gyr_int.cpp  imu_init.cpp  lio_node.cpp  local_map.cpp
src/lio/: data_process.cpp  deskew.cpp  gyr_int.cpp  imu_init.cpp  lio_estimator.cpp  local_map.cpp  preintegration.cpp  registration.cpp  sync.cpp  tight_registration.cpp
test/: test_imu_init.cpp  test_jacobian.cpp  test_local_map.cpp  test_nav_residual.cpp  test_preintegration.cpp  test_registration.cpp  test_sync.cpp  test_tight.cpp
